--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
       </div>
 
       <div class="ask">
-        <img src="/img/Heisman.jpeg" alt="Heisman" />
+        <img src="img/heisman-trophy.jpg" alt="Heisman" />
 
         <h3>Question #4</h3>
         <h4>Who was the oldest player to win the Heisman?</h4>
@@ -75,7 +75,7 @@
       </div>
 
       <div class="ask">
-        <img src="/img/golf-drive.jpg" alt="Golf" />
+        <img src="img/Driving.jpg" alt="Golf" />
 
         <h3>Question #5</h3>
         <h4>
@@ -91,7 +91,7 @@
       </div>
 
       <div class="ask">
-        <img src="/img/Favre_Brett1_Falcons.jpg" alt="Brett Favre" />
+        <img src="img/Favre.jpg" alt="Brett Favre" />
 
         <h3>Question #6</h3>
         <h4>Who caught Brett Favre's first regular season pass?</h4>
@@ -104,7 +104,7 @@
       </div>
 
       <div class="ask">
-        <img src="/img/Serena Williams.jpeg" alt="Serena Williams" />
+        <img src="img/williams.jpg" alt="Serena Williams" />
 
         <h3>Question #7</h3>
         <h4>
@@ -119,7 +119,7 @@
       </div>
 
       <div class="ask">
-        <img src="/img/super_bowl.jpg" alt="Super Bowl" />
+        <img src="img/super bowl.png" alt="Super Bowl" />
 
         <h3>Question #8</h3>
         <h4>How many current NFL teams have never played in a Super Bowl?</h4>
@@ -132,7 +132,7 @@
       </div>
 
       <div class="ask">
-        <img src="/img/Tiger-Woods.jpg" alt="Tiger Woods" />
+        <img src="img/Tiger Woods.jpg" alt="Tiger Woods" />
 
         <h3>Question #9</h3>
         <h4>What year did Tiger Woods win his first Masters Tournament?</h4>
@@ -145,7 +145,7 @@
       </div>
 
       <div class="ask">
-        <img src="/img/Larry Bird.jpg" alt="Larry Bird" />
+        <img src="img/larry-bird.webp" alt="Larry Bird" />
 
         <h3>Question #10</h3>
         <h4>
