--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <img src="img/Jordan.jpg" alt="Jordan" />
 
         <h3>Question #2</h3>
-        <h4>What was college was Michael Jordan's dream school?</h4>
+        <h4>What college was Michael Jordan's dream school?</h4>
         <div class="answers">
           <div class="correct">UCLA</div>
           <div class="wrong">Stanford</div>
